# CliGuard

./: AGENTIC_AI_CLIGUARD_GUIDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: frameworks.md  index.md  installation.md  output.md  pipeline.md  usage.md
src/: generator.rs  ir.rs  main.rs  parser.rs  security.rs
src/parser/: argparse.rs  clap_parser.rs  click.rs  cobra.rs  gcloud.rs  gnu.rs  runner.rs
