[package]
name = "cliguard"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Auto-generate agentic AI guides from CLI tool help output"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
regex = "1"
wait-timeout = "0.2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[lints.rust]
dead_code = "deny"
unused_variables = "deny"
unsafe_code = "forbid"
